<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="14sp"
            android:text="@string/history_text" />

        <TextView
            android:id="@+id/dateHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/date"
            android:textSize="14sp"
            android:textColor="@color/graham_gray"
            android:fontFamily="@font/montserrat_semibold"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <TextView
        android:id="@+id/diseaseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/nama_penyakit"
        android:fontFamily="@font/montserrat_medium"
        android:textAlignment="textStart" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp" />

</LinearLayout>
